--- a/webtest/.classpath
+++ b/webtest/.classpath
@@ -13,5 +13,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="D:/workspace_git/ijnet3.0_web_sejong/src/main/webapp/WEB-INF/lib/json_simple-1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/sayit/Downloads/jdom-2.0.5.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
